# backend-new/internal/pkg/api/tag_service_http.pb.go
@@ -1,0 +1,120 @@
+// Code generated by protoc-gen-go-http. DO NOT EDIT.
+// versions:
+// - protoc-gen-go-http v2.9.2
+// - protoc             v7.34.1
+// source: tag_service.proto
+
+package api
+
+import (
+	context "context"
+	http "github.com/go-kratos/kratos/v2/transport/http"
+	binding "github.com/go-kratos/kratos/v2/transport/http/binding"
+)
+
+// This is a compile-time assertion to ensure that this generated file
+// is compatible with the kratos package it is being compiled against.
+var _ = new(context.Context)
+var _ = binding.EncodeURL
+
+const _ = http.SupportPackageIsVersion1
+
+const OperationTagServiceGetPhotosByTag = "/api.TagService/GetPhotosByTag"
+const OperationTagServiceListTags = "/api.TagService/ListTags"
+
+type TagServiceHTTPServer interface {
+	// GetPhotosByTag 某标签下的照片
+	GetPhotosByTag(context.Context, *GetPhotosByTagRequest) (*GetPhotosByTagResponse, error)
+	// ListTags 所有标签列表
+	ListTags(context.Context, *Empty) (*ListTagsResponse, error)
+}
+
+func RegisterTagServiceHTTPServer(s *http.Server, srv TagServiceHTTPServer) {
+	r := s.Route("/")
+	r.GET("/api/v1/tags", _TagService_ListTags0_HTTP_Handler(srv))
+	r.GET("/api/v1/tags/{name}/photos", _TagService_GetPhotosByTag0_HTTP_Handler(srv))
+}
+
+func _TagService_ListTags0_HTTP_Handler(srv TagServiceHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in Empty
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationTagServiceListTags)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.ListTags(ctx, req.(*Empty))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*ListTagsResponse)
+		return ctx.Result(200, reply)
+	}
+}
+
+func _TagService_GetPhotosByTag0_HTTP_Handler(srv TagServiceHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in GetPhotosByTagRequest
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		if err := ctx.BindVars(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationTagServiceGetPhotosByTag)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.GetPhotosByTag(ctx, req.(*GetPhotosByTagRequest))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*GetPhotosByTagResponse)
+		return ctx.Result(200, reply)
+	}
+}
+
+type TagServiceHTTPClient interface {
+	// GetPhotosByTag 某标签下的照片
+	GetPhotosByTag(ctx context.Context, req *GetPhotosByTagRequest, opts ...http.CallOption) (rsp *GetPhotosByTagResponse, err error)
+	// ListTags 所有标签列表
+	ListTags(ctx context.Context, req *Empty, opts ...http.CallOption) (rsp *ListTagsResponse, err error)
+}
+
+type TagServiceHTTPClientImpl struct {
+	cc *http.Client
+}
+
+func NewTagServiceHTTPClient(client *http.Client) TagServiceHTTPClient {
+	return &TagServiceHTTPClientImpl{client}
+}
+
+// GetPhotosByTag 某标签下的照片
+func (c *TagServiceHTTPClientImpl) GetPhotosByTag(ctx context.Context, in *GetPhotosByTagRequest, opts ...http.CallOption) (*GetPhotosByTagResponse, error) {
+	var out GetPhotosByTagResponse
+	pattern := "/api/v1/tags/{name}/photos"
+	path := binding.EncodeURL(pattern, in, true)
+	opts = append(opts, http.Operation(OperationTagServiceGetPhotosByTag))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "GET", path, nil, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
+
+// ListTags 所有标签列表
+func (c *TagServiceHTTPClientImpl) ListTags(ctx context.Context, in *Empty, opts ...http.CallOption) (*ListTagsResponse, error) {
+	var out ListTagsResponse
+	pattern := "/api/v1/tags"
+	path := binding.EncodeURL(pattern, in, true)
+	opts = append(opts, http.Operation(OperationTagServiceListTags))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "GET", path, nil, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
